Disabled overflow hidden to fix scrolling bug

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@
 
 *{
   margin: 0;
-  overflow: hidden;
   font-family: 'Poppins', sans-serif !important;
   letter-spacing: 1px;
 }
